--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <title>🌸 Otohime Sounds</title>
 
+  <!-- Google site verification -->
+  <meta name="google-site-verification" content="<meta name="google-site-verification" content="jbA82RPnpni_Zp9j2jAj49_ff-w5oF0aPDh_8QC3R9g" />
+  
   <!-- Google Fonts: Outfit -->
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700&display=swap" rel="stylesheet" />
 
