--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>🌸 Otohime Sounds</title>
+  <title>🌸 乙姫のような癒しの水音を再生 | Otohime Sounds</title>
+  <meta name="description" content="乙姫のような癒しの水音・川の音・泡の音・森林音を再生できる無料サウンドプレイヤー。作業用BGMやリラックス、瞑想に最適。シンプルで美しいインターフェース。">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Google site verification -->
   <meta name="google-site-verification" content="jbA82RPnpni_Zp9j2jAj49_ff-w5oF0aPDh_8QC3R9g" />
@@ -28,31 +30,34 @@
       -moz-osx-font-smoothing: grayscale;
     }
 
-    /* コンテナ */
     .container {
       width: 100%;
       max-width: 420px;
       background: rgba(255 255 255 / 0.35);
       border-radius: 20px;
       padding: 30px 25px;
-      box-shadow:
-        0 8px 32px rgba(0, 0, 0, 0.08);
+      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.08);
       backdrop-filter: blur(12px);
       -webkit-backdrop-filter: blur(12px);
       border: 1px solid rgba(255 255 255 / 0.25);
     }
 
-    /* タイトル */
     h1 {
       font-weight: 700;
       font-size: 2.5rem;
       color: #d77fa1;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
       text-shadow: 0 2px 6px rgba(215, 127, 161, 0.5);
       user-select: none;
     }
 
-    /* サウンド選択 */
+    p {
+      font-size: 1rem;
+      color: #555;
+      margin-bottom: 30px;
+      line-height: 1.6;
+    }
+
     select {
       width: 100%;
       font-size: 1.1rem;
@@ -66,20 +71,18 @@
       transition: border-color 0.3s ease;
       cursor: pointer;
       appearance: none;
-      -webkit-appearance: none;
-      -moz-appearance: none;
       background-image: url("data:image/svg+xml;charset=US-ASCII,%3csvg%20width%3d'12'%20height%3d'7'%20viewBox%3d'0%200%2012%207'%20xmlns%3d'http%3a//www.w3.org/2000/svg'%3e%3cpolygon%20points%3d'0%2c0%2012%2c0%206%2c7'%20fill%3d'%23874a62'%2f%3e%3c%2fsvg%3e");
       background-repeat: no-repeat;
       background-position: right 15px center;
       background-size: 12px 7px;
-      padding-right: 45px; /* 矢印がテキストに被らないように */
+      padding-right: 45px;
     }
+
     select:hover, select:focus {
       border-color: #d77fa1;
       outline: none;
     }
 
-    /* ボタン */
     .button {
       width: 100%;
       padding: 16px 0;
@@ -97,17 +100,18 @@
       position: relative;
       overflow: hidden;
     }
+
     .button:hover {
       background: linear-gradient(90deg, #d77fa1 0%, #f9b5c2 100%);
       box-shadow: 0 12px 24px rgba(215, 127, 161, 0.8);
       transform: scale(1.05);
     }
+
     .button:focus {
       outline: 3px solid #f9b5c2;
       outline-offset: 4px;
     }
 
-    /* ボタン光るアニメーション */
     .button.playing::before {
       content: '';
       position: absolute;
@@ -120,12 +124,12 @@
       pointer-events: none;
       border-radius: 50%;
     }
+
     @keyframes glowPulse {
       0%, 100% {opacity: 0;}
       50% {opacity: 1;}
     }
 
-    /* 音量スライダーコンテナ */
     .slider-container {
       display: flex;
       align-items: center;
@@ -134,7 +138,6 @@
       user-select: none;
     }
 
-    /* 音量アイコン */
     .icon {
       font-size: 1.3rem;
       color: #d77fa1;
@@ -143,7 +146,6 @@
       user-select: none;
     }
 
-    /* スライダー */
     input[type="range"] {
       -webkit-appearance: none;
       appearance: none;
@@ -154,14 +156,16 @@
       cursor: pointer;
       transition: background 0.3s ease;
     }
+
     input[type="range"]:hover {
       background: linear-gradient(90deg, #d77fa1 0%, #f9b5c2 100%);
     }
+
     input[type="range"]:focus {
       outline: none;
       box-shadow: 0 0 8px 2px rgba(215, 127, 161, 0.6);
     }
-    /* Webkit */
+
     input[type="range"]::-webkit-slider-thumb {
       -webkit-appearance: none;
       appearance: none;
@@ -176,12 +180,12 @@
       position: relative;
       z-index: 1;
     }
+
     input[type="range"]::-webkit-slider-thumb:hover {
       background: #f9b5c2;
       box-shadow: 0 0 12px 4px #f9b5c2;
     }
 
-    /* Firefox */
     input[type="range"]::-moz-range-thumb {
       width: 24px;
       height: 24px;
@@ -191,6 +195,7 @@
       cursor: pointer;
       transition: background 0.3s ease;
     }
+
     input[type="range"]::-moz-range-thumb:hover {
       background: #f9b5c2;
       box-shadow: 0 0 12px 4px #f9b5c2;
@@ -200,7 +205,9 @@
 <body>
   <div class="container" role="main" aria-label="Otohime Sounds player">
 
-    <h1>🌸 Otohime Sounds</h1>
+    <h1>🌸 乙姫の癒し音・自然音プレイヤー</h1>
+
+    <p>このサイトは、乙姫を思わせる水音や川の音、泡の音、森林の音など、自然で心地よいサウンドを自由に再生できるWebプレイヤーです。作業用BGMや睡眠・瞑想のお供に最適です。</p>
 
     <select id="soundSelector" aria-label="サウンド選択">
       <option value="water1.mp3">水の音</option>
@@ -230,14 +237,12 @@
 
     let isPlaying = false;
 
-    // 音量反映
     player.volume = volumeSlider.value;
 
     volumeSlider.addEventListener('input', () => {
       player.volume = volumeSlider.value;
     });
 
-    // 再生/停止トグル関数
     function toggleSound() {
       const selectedSound = selector.value;
       if (player.src !== selectedSound) {
@@ -253,16 +258,14 @@
       } else {
         player.pause();
         isPlaying = false;
-        button.textContent = '再生 ▷';
+        button.textContent = '再生 ▶️';
         button.classList.remove('playing');
         button.setAttribute('aria-pressed', 'false');
       }
     }
 
-    // ボタンにイベント登録
     button.addEventListener('click', toggleSound);
 
-    // 音が変わったら自動で再生を切り替え
     selector.addEventListener('change', () => {
       if (isPlaying) {
         player.pause();
