--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
 <body>
   <div class="container" role="main" aria-label="Otohime Sounds player">
 
-    <h1>🌸 乙姫の癒し音・自然音プレイヤー</h1>
+    <h1>🌸 Otohime Sounds</h1>
 
-    <p>このサイトは、乙姫を思わせる水音や川の音、泡の音、森林の音など、自然で心地よいサウンドを自由に再生できるWebプレイヤーです。作業用BGMや睡眠・瞑想のお供に最適です。</p>
+    //<p>このサイトは、乙姫を思わせる水音や川の音、泡の音、森林の音など、自然で心地よいサウンドを自由に再生できるWebプレイヤーです。作業用BGMや睡眠・瞑想のお供に最適です。</p>
 
     <select id="soundSelector" aria-label="サウンド選択">
       <option value="water1.mp3">水の音</option>
