--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
       } else {
         player.pause();
         isPlaying = false;
-        button.textContent = '再生 ▶️';
+        button.textContent = '再生 ▷';
         button.classList.remove('playing');
         button.setAttribute('aria-pressed', 'false');
       }
