--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>乙姫の癒し水音プレイヤー | Otohime Sounds</title>
+  <title>Otohime Sounds | 乙姫のような水音プレイヤー</title>
   <meta name="description" content="乙姫のような癒しの水音・川の音・泡の音・森林音を再生できる無料サウンドプレイヤー。作業用BGMやリラックス、瞑想に最適。シンプルで美しいインターフェース。" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
