--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 <body>
 <div class="container" role="main" aria-label="AquaMelody">
   <h1>
-    <img src="sakura2.png" alt="桜アイコン" style="width: 1.5em; vertical-align: middle; margin-right: 8px;">
+    <span style="margin-right: 8px;">🌸</span>
     AquaMelody
   </h1>
 
