--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 <!-- 🔽 広告スペース -->
 <div class="ad-space">
   <!-- 忍者AdMaxの広告コードをここに貼る -->
-  <script src="https://adm.shinobi.jp/s/xxxxxxxxxx"></script>
+  <script src="https://adm.shinobi.jp/s/4099dc0c99224f87065d7a26947e4204"></script>
 </div>
 
 <script>
