--- a/river.html
+++ b/river.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>AquaMelody | 川の音</title>
+  <title>AquaMelody | 森林の音</title>
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Kiwi+Maru&display=swap" rel="stylesheet" />
@@ -159,8 +159,8 @@
   <label for="soundSelector" class="visually-hidden">サウンド選択</label>
   <select id="soundSelector" aria-label="サウンド選択" onchange="location = this.value;">
     <option value="index.html">水の音</option>
-    <option value="water2.html selected">川の音</option>
-    <option value="river.html">森林の音</option>
+    <option value="water2.html>川の音</option>
+    <option value="river.html" selected">森林の音</option>
     <option value="bubble.html">泡の音</option>
   </select>
 
