--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,41 +3,84 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>プライバシーポリシー</title>
+  <title>プライバシーポリシー | AquaMelody</title>
+  <style>
+    body {
+      font-family: "Segoe UI", "Hiragino Sans", "Noto Sans JP", sans-serif;
+      line-height: 1.7;
+      color: #333;
+      padding: 2rem;
+      max-width: 900px;
+      margin: auto;
+      background: #fafafa;
+    }
+    h1, h2 {
+      color: #0077aa;
+    }
+    a { color: #0066cc; }
+  </style>
 </head>
 <body>
   <h1>プライバシーポリシー</h1>
 
-  <p>本ウェブサイト（以下、「当サイト」）では、ユーザーのプライバシーを尊重し、個人情報の保護に努めています。</p>
+  <p>
+    AquaMelody（以下、「本アプリ」）は、ユーザーのプライバシーを尊重し、個人情報の保護に努めています。
+    本ポリシーでは、本アプリにおける情報の取扱いについて説明します。
+  </p>
 
   <h2>1. 収集する情報</h2>
-  <p>当サイトでは以下の情報を収集する場合があります：</p>
+  <p>本アプリでは、以下の情報を収集する場合があります。</p>
   <ul>
-    <li>IPアドレス、ブラウザの種類、閲覧日時などのアクセス情報（Google Analyticsによる収集）</li>
-    <li>お問い合わせフォームなどを通じて提供される情報（該当する場合）</li>
+    <li>広告配信のために使用される端末の広告識別子（Google AdMobによる）</li>
+    <li>アプリの利用状況（クラッシュ情報、利用時間、端末の種類など）</li>
+    <li>アクセス解析に伴うIPアドレス、ブラウザの種類、利用日時（Google Analyticsによる）</li>
   </ul>
 
   <h2>2. 利用目的</h2>
-  <p>収集した情報は、以下の目的で使用します：</p>
   <ul>
-    <li>サイトの利用状況の分析・改善</li>
-    <li>ユーザーからのお問い合わせ対応（該当する場合）</li>
+    <li>アプリおよびサービスの品質向上</li>
+    <li>広告配信および最適化</li>
+    <li>不具合の修正やユーザーサポートの改善</li>
   </ul>
 
-  <h2>3. Cookie の使用について</h2>
-  <p>当サイトでは、Google Analytics によるトラフィック解析のために Cookie を使用しています。ユーザーはブラウザの設定で Cookie を無効にすることができます。</p>
-
-  <h2>4. 第三者への提供</h2>
-  <p>取得した個人情報を第三者に提供することはありません。ただし、法律に基づき開示が必要な場合を除きます。</p>
-
-  <h2>5. 免責事項</h2>
-  <p>当サイトからリンクされている外部サイトにおける個人情報の取扱いについては、当サイトでは責任を負いません。</p>
-
-  <h2>6. お問い合わせ</h2>
-  <p>プライバシーポリシーに関するお問い合わせは、以下の GitHub アカウントよりご連絡ください：<br>
-  <a href="https://github.com/Makoto-testm" target="_blank">https://github.com/Makoto-testm</a>
+  <h2>3. Cookieおよび類似技術の使用</h2>
+  <p>
+    本アプリおよび関連するウェブサイトでは、Google Analytics等の解析ツールを利用するためにCookieを使用しています。
+    これらのデータは匿名で収集され、個人を特定するものではありません。
+    ユーザーはブラウザ設定によりCookieを無効にすることができます。
   </p>
 
-  <p>制定日：2025年7月29日</p>
+  <h2>4. 広告について</h2>
+  <p>
+    本アプリでは、Google AdMob による広告配信を行っています。
+    AdMob はユーザーの興味・関心に基づく広告を表示するために、広告識別子などの情報を利用する場合があります。
+    収集されたデータの詳細については、以下のGoogleのポリシーをご確認ください。<br>
+    👉 <a href="https://policies.google.com/technologies/ads?hl=ja" target="_blank" rel="noopener noreferrer">Googleの広告ポリシー</a>
+  </p>
+
+  <h2>5. 第三者への提供</h2>
+  <p>
+    本アプリは、法律で定められた場合を除き、取得した情報を第三者に提供することはありません。
+  </p>
+
+  <h2>6. 外部リンクおよび他サービスの利用</h2>
+  <p>
+    本アプリや当サイトには、外部のリンクやサービスが含まれる場合があります。
+    外部サイトでの個人情報の取扱いについては、各サイトのプライバシーポリシーをご確認ください。
+  </p>
+
+  <h2>7. 免責事項</h2>
+  <p>
+    本アプリの利用により発生したいかなる損害についても、開発者は一切の責任を負いません。
+  </p>
+
+  <h2>8. お問い合わせ</h2>
+  <p>
+    プライバシーポリシーに関するお問い合わせは、以下の開発者ページよりお願いいたします。<br>
+    <a href="https://github.com/Makoto-testm" target="_blank" rel="noopener noreferrer">https://github.com/Makoto-testm</a>
+  </p>
+
+  <p>制定日：2025年7月29日<br>
+  最終更新日：2025年10月7日</p>
 </body>
 </html>
