--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -3,84 +3,58 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>プライバシーポリシー | AquaMelody</title>
-  <style>
-    body {
-      font-family: "Segoe UI", "Hiragino Sans", "Noto Sans JP", sans-serif;
-      line-height: 1.7;
-      color: #333;
-      padding: 2rem;
-      max-width: 900px;
-      margin: auto;
-      background: #fafafa;
-    }
-    h1, h2 {
-      color: #0077aa;
-    }
-    a { color: #0066cc; }
-  </style>
+  <title>プライバシーポリシー | AquaMelody（アクアメロディ）</title>
 </head>
 <body>
   <h1>プライバシーポリシー</h1>
 
   <p>
-    AquaMelody（以下、「本アプリ」）は、ユーザーのプライバシーを尊重し、個人情報の保護に努めています。
-    本ポリシーでは、本アプリにおける情報の取扱いについて説明します。
+    本プライバシーポリシーは、開発者 <strong>Bou</strong>（以下、「当方」）が提供する Android アプリ
+    「<strong>AquaMelody（アクアメロディ）</strong>」（以下、「本アプリ」）に関するものです。
+    本アプリをご利用いただく際の個人情報および利用者情報の取扱いについて定めます。
   </p>
 
   <h2>1. 収集する情報</h2>
-  <p>本アプリでは、以下の情報を収集する場合があります。</p>
+  <p>本アプリでは、次の情報を収集する場合があります。</p>
   <ul>
-    <li>広告配信のために使用される端末の広告識別子（Google AdMobによる）</li>
-    <li>アプリの利用状況（クラッシュ情報、利用時間、端末の種類など）</li>
-    <li>アクセス解析に伴うIPアドレス、ブラウザの種類、利用日時（Google Analyticsによる）</li>
+    <li>広告配信のための匿名データ（Google AdMob を通じて自動的に収集）</li>
+    <li>クラッシュレポート、利用状況などの分析データ（Firebase など Google の関連サービスを通じて収集）</li>
   </ul>
+  <p>これらの情報には、個人を特定できる情報は含まれません。</p>
 
   <h2>2. 利用目的</h2>
+  <p>収集した情報は以下の目的で利用します。</p>
   <ul>
-    <li>アプリおよびサービスの品質向上</li>
-    <li>広告配信および最適化</li>
-    <li>不具合の修正やユーザーサポートの改善</li>
+    <li>アプリの動作改善および機能向上</li>
+    <li>利用状況の分析による品質改善</li>
+    <li>適切な広告の配信</li>
   </ul>
 
-  <h2>3. Cookieおよび類似技術の使用</h2>
+  <h2>3. 使用する外部サービス</h2>
+  <p>本アプリでは、以下の第三者サービスを利用しています。</p>
+  <ul>
+    <li>
+      Google AdMob（広告配信サービス）<br>
+      <a href="https://policies.google.com/privacy?hl=ja" target="_blank">Google プライバシーポリシー</a>
+    </li>
+  </ul>
+
+  <h2>4. 個人情報の第三者提供</h2>
+  <p>当方は、法令に基づく場合を除き、ユーザーの個人情報を第三者に提供することはありません。</p>
+
+  <h2>5. Cookieの使用について</h2>
+  <p>広告配信およびアクセス解析のために Cookie を使用する場合があります。ユーザーはブラウザの設定で Cookie の使用を無効にすることができます。</p>
+
+  <h2>6. プライバシーポリシーの変更</h2>
+  <p>本ポリシーの内容は、必要に応じて変更される場合があります。最新の内容は本ページで常にご確認いただけます。</p>
+
+  <h2>7. お問い合わせ</h2>
   <p>
-    本アプリおよび関連するウェブサイトでは、Google Analytics等の解析ツールを利用するためにCookieを使用しています。
-    これらのデータは匿名で収集され、個人を特定するものではありません。
-    ユーザーはブラウザ設定によりCookieを無効にすることができます。
+    本ポリシーまたは本アプリに関するお問い合わせは、以下の開発者までご連絡ください。<br>
+    開発者名：<strong>Bou</strong><br>
+    GitHubページ：<a href="https://github.com/Makoto-testm" target="_blank">https://github.com/Makoto-testm</a>
   </p>
 
-  <h2>4. 広告について</h2>
-  <p>
-    本アプリでは、Google AdMob による広告配信を行っています。
-    AdMob はユーザーの興味・関心に基づく広告を表示するために、広告識別子などの情報を利用する場合があります。
-    収集されたデータの詳細については、以下のGoogleのポリシーをご確認ください。<br>
-    👉 <a href="https://policies.google.com/technologies/ads?hl=ja" target="_blank" rel="noopener noreferrer">Googleの広告ポリシー</a>
-  </p>
-
-  <h2>5. 第三者への提供</h2>
-  <p>
-    本アプリは、法律で定められた場合を除き、取得した情報を第三者に提供することはありません。
-  </p>
-
-  <h2>6. 外部リンクおよび他サービスの利用</h2>
-  <p>
-    本アプリや当サイトには、外部のリンクやサービスが含まれる場合があります。
-    外部サイトでの個人情報の取扱いについては、各サイトのプライバシーポリシーをご確認ください。
-  </p>
-
-  <h2>7. 免責事項</h2>
-  <p>
-    本アプリの利用により発生したいかなる損害についても、開発者は一切の責任を負いません。
-  </p>
-
-  <h2>8. お問い合わせ</h2>
-  <p>
-    プライバシーポリシーに関するお問い合わせは、以下の開発者ページよりお願いいたします。<br>
-    <a href="https://github.com/Makoto-testm" target="_blank" rel="noopener noreferrer">https://github.com/Makoto-testm</a>
-  </p>
-
-  <p>制定日：2025年7月29日<br>
-  最終更新日：2025年10月7日</p>
+  <p>制定日：2025年10月7日</p>
 </body>
 </html>
